# MENU-WII_LIKE-TRIMUI_BRICK

./: CMakeLists.txt  COMPILATION.md  Makefile
src/: main.c
src/audio/: audio.c  audio.h
src/channels/: channel.c  channel.h
src/input/: input.c  input.h
src/theme/: theme.c  theme.h
src/ui/: animations.h  banner.c  banner.h  channels.h  ui.c  ui.h  widgets.h
wii-frontend/: Makefile  README.md
wii-frontend/assets/themes/default/: theme.conf  theme.json
wii-frontend/config/: channels.conf
wii-frontend/src/: main.c
wii-frontend/src/audio/: audio.c  audio.h
wii-frontend/src/channels/: channel.c  channel.h
wii-frontend/src/input/: input.c  input.h
wii-frontend/src/theme/: theme.c  theme.h
wii-frontend/src/ui/: animations.c  animations.h  banner.c  banner.h  ui.c  ui.h  widgets.c  widgets.h
